@@ -534,11 +534,8 @@ void mi::SetProgramNr(int nr)
 //////////////////////////////////////////////////////////////////////
 void mi::PutData(void * pData)
 {
-  for(int i=0;i<16;i++)
-    m_programs[i].byteswap();
-	memcpy(m_programs, pData, sizeof(PROG) * 16);
-  for(int i=0;i<16;i++)
-    m_programs[i].byteswap();
+	memcpy(m_programs, pData, GetDataSize());
+	for(int i=0;i<16;i++) { m_programs[i].byteswap();}
 	int nr = (int) (m_programs[0].length & 0xff00) >> 8;
 	m_programs[0].length &= (short) 0xff;
 	SetProgramNr(nr);
@@ -552,11 +549,9 @@ void mi::PutData(void * pData)
 void mi::GetData(void * pData)
 {
 	m_programs[0].length |= (short) (Vals[PARAM_PROGRAM_NR] << 8);
-  for(int i=0;i<16;i++)
-    m_programs[i].byteswap();
-	memcpy(pData, m_programs, sizeof(PROG) * 16);
-  for(int i=0;i<16;i++)
-    m_programs[i].byteswap();
+	for(int i=0;i<16;i++) { m_programs[i].byteswap();}
+	memcpy(pData, m_programs, GetDataSize());
+	for(int i=0;i<16;i++) { m_programs[i].byteswap();}
 	m_programs[0].length &= (short) 0xff;
 }
 
